--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -456,26 +456,39 @@
             }
 
             //-------------- ORDERING (REESCRITO DO ZERO) --------------
-            else if (qObj.qtype === 'ordering') {
-                let containerDOM = qObj.containerDOM;
-                let inputs = containerDOM.querySelectorAll('input.answer-input');
-                let anyWrong = false;
-                for (let i=0; i<qObj.items.length; i++) {
-                    // Posição correta do i-ésimo item
-                    const correctPos = qObj.correctPositions[i];
-                    const userVal = parseInt(inputs[i].value.trim(), 10);
-                    if (isNaN(userVal) || userVal !== correctPos) {
-                        anyWrong = true;
-                        wrongItems.push(inputs[i]);
-                        inputs[i].classList.remove('correct');
-                        inputs[i].classList.add('incorrect');
-                    } else {
-                        inputs[i].classList.remove('incorrect');
-                        inputs[i].classList.add('correct');
-                    }
-                }
-                if (anyWrong) allCorrect = false;
+           else if (qObj.qtype === 'ordering') {
+    let containerDOM = qObj.containerDOM;
+    let inputs = containerDOM.querySelectorAll('input.answer-input');
+
+    // Criar um array auxiliar para armazenar a resposta do usuário
+    let userOrder = new Array(qObj.items.length).fill(null);
+
+    for (let i = 0; i < qObj.items.length; i++) {
+        const userVal = parseInt(inputs[i].value.trim(), 10);
+        if (!isNaN(userVal)) {
+            userOrder[userVal - 1] = i; // Armazena a posição original do item no array do usuário
+        }
+    }
+
+    let anyWrong = false;
+    for (let i = 0; i < qObj.items.length; i++) {
+        const correctIndex = qObj.correctPositions[i] - 1; // Posição correta (convertida para índice)
+        if (userOrder[i] !== correctIndex) {
+            anyWrong = true;
+            if (userOrder[i] !== null) {
+                inputs[userOrder[i]].classList.remove('correct');
+                inputs[userOrder[i]].classList.add('incorrect');
             }
+        } else {
+            if (userOrder[i] !== null) {
+                inputs[userOrder[i]].classList.remove('incorrect');
+                inputs[userOrder[i]].classList.add('correct');
+            }
+        }
+    }
+
+    if (anyWrong) allCorrect = false;
+}
         });
 
         // Se existem erros e o usuário é aluno atrelado a professor => toco o alarme
