--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -460,29 +460,31 @@
     let containerDOM = qObj.containerDOM;
     let inputs = containerDOM.querySelectorAll('input.answer-input');
 
-    // Criar um array auxiliar para armazenar a resposta do usuário
-    let userOrder = new Array(qObj.items.length).fill(null);
-
-    for (let i = 0; i < qObj.items.length; i++) {
-        const userVal = parseInt(inputs[i].value.trim(), 10);
-        if (!isNaN(userVal)) {
-            userOrder[userVal - 1] = i; // Armazena a posição original do item no array do usuário
-        }
-    }
-
     let anyWrong = false;
+
     for (let i = 0; i < qObj.items.length; i++) {
-        const correctIndex = qObj.correctPositions[i] - 1; // Posição correta (convertida para índice)
-        if (userOrder[i] !== correctIndex) {
+        const correctPos = qObj.correctPositions[i]; // Obtém a posição correta (1-based index)
+        const userVal = parseInt(inputs[i].value.trim(), 10); // Valor digitado pelo usuário
+
+        if (isNaN(userVal) || userVal !== correctPos) {
             anyWrong = true;
-            if (userOrder[i] !== null) {
-                inputs[userOrder[i]].classList.remove('correct');
-                inputs[userOrder[i]].classList.add('incorrect');
+            inputs[i].classList.remove('correct');
+            inputs[i].classList.add('incorrect');
+
+            // Mostra a resposta correta ao lado do campo
+            let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
+            if (correctSpan) {
+                correctSpan.textContent = `Right position: ${correctPos}`;
+                correctSpan.style.display = 'inline';
             }
         } else {
-            if (userOrder[i] !== null) {
-                inputs[userOrder[i]].classList.remove('incorrect');
-                inputs[userOrder[i]].classList.add('correct');
+            inputs[i].classList.remove('incorrect');
+            inputs[i].classList.add('correct');
+
+            // Esconde a resposta correta se a resposta estiver certa
+            let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
+            if (correctSpan) {
+                correctSpan.style.display = 'none';
             }
         }
     }
