--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -456,39 +456,24 @@
             }
 
             //-------------- ORDERING (REESCRITO DO ZERO) --------------
-           else if (qObj.qtype === 'ordering') {
+          else if (qObj.qtype === 'ordering') {
     let containerDOM = qObj.containerDOM;
     let inputs = containerDOM.querySelectorAll('input.answer-input');
-
     let anyWrong = false;
-
     for (let i = 0; i < qObj.items.length; i++) {
-        const correctPos = qObj.correctPositions[i]; // Obtém a posição correta (1-based index)
-        const userVal = parseInt(inputs[i].value.trim(), 10); // Valor digitado pelo usuário
-
+        const correctPos = qObj.correctPositions[i]; // Obtém a posição correta
+        const userVal = parseInt(inputs[i].value.trim(), 10); // Resposta do usuário
+        
         if (isNaN(userVal) || userVal !== correctPos) {
             anyWrong = true;
+            wrongItems.push(inputs[i]);
             inputs[i].classList.remove('correct');
             inputs[i].classList.add('incorrect');
-
-            // Mostra a resposta correta ao lado do campo
-            let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
-            if (correctSpan) {
-                correctSpan.textContent = `Right position: ${correctPos}`;
-                correctSpan.style.display = 'inline';
-            }
         } else {
             inputs[i].classList.remove('incorrect');
             inputs[i].classList.add('correct');
-
-            // Esconde a resposta correta se a resposta estiver certa
-            let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
-            if (correctSpan) {
-                correctSpan.style.display = 'none';
-            }
         }
     }
-
     if (anyWrong) allCorrect = false;
 }
         });
