--- a/Atividades/Exerciciosdegramatica/index - bom com erro NaN.html
+++ b/Atividades/Exerciciosdegramatica/index - bom com erro NaN.html
@@ -455,31 +455,27 @@
                 if (mismatch) allCorrect = false;
             }
 
-            //-------------- ORDERING --------------
-            else if (qObj.qtype === 'ordering') {
-                let containerDOM = qObj.containerDOM;
-                let inputs = containerDOM.querySelectorAll('input.answer-input');
-
-                let anyWrong = false;
-
-                // Nesta verificação (1ª, 2ª ou 3ª), apenas marcamos como certo ou errado.
-                // Não exibimos o "Right position" aqui na 1ª e 2ª checagem.
-                for (let i = 0; i < qObj.items.length; i++) {
-                    const correctPos = qObj.correctPositions[i]; // índice 1-based (ex.: 2,1,4,3)
-                    const userVal = parseInt(inputs[i].value.trim(), 10);
-
-                    if (isNaN(userVal) || userVal !== correctPos) {
-                        anyWrong = true;
-                        wrongItems.push(inputs[i]);
-                        inputs[i].classList.remove('correct');
-                        inputs[i].classList.add('incorrect');
-                    } else {
-                        inputs[i].classList.remove('incorrect');
-                        inputs[i].classList.add('correct');
-                    }
-                }
-                if (anyWrong) allCorrect = false;
-            }
+            //-------------- ORDERING (REESCRITO DO ZERO) --------------
+          else if (qObj.qtype === 'ordering') {
+    let containerDOM = qObj.containerDOM;
+    let inputs = containerDOM.querySelectorAll('input.answer-input');
+    let anyWrong = false;
+    for (let i = 0; i < qObj.items.length; i++) {
+        const correctPos = qObj.correctPositions[i]; // Obtém a posição correta
+        const userVal = parseInt(inputs[i].value.trim(), 10); // Resposta do usuário
+        
+        if (isNaN(userVal) || userVal !== correctPos) {
+            anyWrong = true;
+            wrongItems.push(inputs[i]);
+            inputs[i].classList.remove('correct');
+            inputs[i].classList.add('incorrect');
+        } else {
+            inputs[i].classList.remove('incorrect');
+            inputs[i].classList.add('correct');
+        }
+    }
+    if (anyWrong) allCorrect = false;
+}
         });
 
         // Se existem erros e o usuário é aluno atrelado a professor => toco o alarme
@@ -544,10 +540,10 @@
                     });
                 }
                 else if (qObj.qtype === 'ordering') {
-                    // Somente na 3ª tentativa mostramos "Right position"
+                    // Mostra "Right position: X" para cada item errado
                     let containerDOM = qObj.containerDOM;
                     let inputs = containerDOM.querySelectorAll('input.answer-input');
-                    for (let i = 0; i < qObj.items.length; i++) {
+                    for (let i=0; i<qObj.items.length; i++) {
                         const correctPos = qObj.correctPositions[i];
                         const userVal = parseInt(inputs[i].value.trim(), 10);
                         if (userVal !== correctPos) {
@@ -776,7 +772,7 @@
                 continue;
             }
 
-            //-------------- #ORDERING --------------
+            //-------------- #ORDERING (RECRIADO DO ZERO) --------------
             if (line.toUpperCase().startsWith('#ORDERING:')) {
                 let questionIndex = questionObjects.length;
                 let items = [];
@@ -790,10 +786,8 @@
                         break;
                     }
                     if (check.toUpperCase().startsWith('#CORRECT_ORDER:')) {
-                        // <-- Aqui ajustamos para eliminar espaços e mostrar no console
                         let seq = check.substring(14).trim();
-                        correctPositions = seq.split(',').map(x => parseInt(x.trim(), 10));
-                        console.log("Positions read for ordering question:", correctPositions);
+                        correctPositions = seq.split(',').map(x => parseInt(x,10));
                         nextLine();
                     } else {
                         // Cada linha é 1 item
@@ -971,7 +965,7 @@
                 qObj.containerDOM = containerDOM;
             }
 
-            // ---------- ordering ----------
+            // ---------- ordering (NOVO) ----------
             else if (qObj.qtype === 'ordering') {
                 let cID = `ordering_container_${qObj.index}`;
                 let containerDOM = container.querySelector(`#${cID}`);
@@ -1017,7 +1011,9 @@
                 });
             }
             else if (qObj.qtype === 'ordering') {
-                // Inputs serão checados em checkAllAnswers()
+                // não mais "sequenceItems" — apenas armazenamos containerDOM
+                // já temos qObj.items e qObj.correctPositions
+                // inputs recuperados em checkAllAnswers()
             }
         });
     }
