--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -457,29 +457,43 @@
 
             //-------------- ORDERING --------------
             else if (qObj.qtype === 'ordering') {
-                let containerDOM = qObj.containerDOM;
-                let inputs = containerDOM.querySelectorAll('input.answer-input');
+    let containerDOM = qObj.containerDOM;
+    let inputs = containerDOM.querySelectorAll('input.answer-input');
+    let anyWrong = false;
 
-                let anyWrong = false;
+    console.log(`Checking ordering question ${qObj.index}. Expected order:`, qObj.correctPositions);
 
-                // Nesta verificação (1ª, 2ª ou 3ª), apenas marcamos como certo ou errado.
-                // Não exibimos o "Right position" aqui na 1ª e 2ª checagem.
-                for (let i = 0; i < qObj.items.length; i++) {
-                    const correctPos = qObj.correctPositions[i]; // índice 1-based (ex.: 2,1,4,3)
-                    const userVal = parseInt(inputs[i].value.trim(), 10);
+    for (let i = 0; i < qObj.items.length; i++) {
+        const correctPos = qObj.correctPositions[i]; 
+        let userVal = parseInt(inputs[i].value.trim(), 10);
 
-                    if (isNaN(userVal) || userVal !== correctPos) {
-                        anyWrong = true;
-                        wrongItems.push(inputs[i]);
-                        inputs[i].classList.remove('correct');
-                        inputs[i].classList.add('incorrect');
-                    } else {
-                        inputs[i].classList.remove('incorrect');
-                        inputs[i].classList.add('correct');
-                    }
-                }
-                if (anyWrong) allCorrect = false;
+        console.log(`User input for "${qObj.items[i]}":`, userVal, `(Correct: ${correctPos})`);
+
+        if (isNaN(userVal) || userVal !== correctPos) {
+            anyWrong = true;
+            inputs[i].classList.remove('correct');
+            inputs[i].classList.add('incorrect');
+
+            let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
+
+            // Só mostra a resposta certa após a terceira tentativa
+            if (checkCount >= 3 && correctSpan) {
+                correctSpan.textContent = `Right position: ${correctPos}`;
+                correctSpan.style.display = 'inline';
             }
+        } else {
+            inputs[i].classList.remove('incorrect');
+            inputs[i].classList.add('correct');
+
+            let correctSpan = inputs[i].parentNode.querySelector('.correct-answer-span');
+            if (correctSpan) {
+                correctSpan.style.display = 'none';
+            }
+        }
+    }
+
+    if (anyWrong) allCorrect = false;
+}
         });
 
         // Se existem erros e o usuário é aluno atrelado a professor => toco o alarme
