--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -807,10 +807,15 @@ if (line.toUpperCase().startsWith('#ORDERING:')) {
             let seq = check.substring(14).trim();
 
             // Convertendo corretamente os valores
-            correctPositions = seq.split(',').map(x => {
-                let num = parseInt(x.trim(), 10);
-                return isNaN(num) ? null : num; // Se não for número, coloca null
-            });
+          correctPositions = seq.split(',').map(x => {
+    let num = parseInt(x.trim(), 10);
+    if (isNaN(num)) {
+        console.error(`Erro ao converter posição em questão de ordenação: '${x.trim()}' não é um número válido.`);
+        alert(`Erro ao ler posição na questão de ordenação. Verifique o arquivo de exercícios.`);
+        return -1; // Substitui null por um valor inválido que pode ser detectado
+    }
+    return num;
+});
 
             console.log(`Positions read for ordering question ${questionIndex}:`, correctPositions);
 
