--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -834,7 +834,7 @@ if (line.toUpperCase().startsWith('#ORDERING:')) {
     }
 
     let containerID = `ordering_container_${questionIndex}`;
-    htmlAccum += `<div class="exercise-line"><strong>Ordenação de sequência</strong></div>`;
+    htmlAccum += `<div class="exercise-line"><strong>Use numbers to arrange the words in the correct order.</strong></div>`;
     htmlAccum += `<div class="choice-container" id="${containerID}"></div>`;
 
     // Armazena a questão
