--- a/Atividades/Exerciciosdegramatica/index - com pdf cortando, dicas etc.html
+++ b/Atividades/Exerciciosdegramatica/index - com pdf cortando, dicas etc.html
@@ -18,6 +18,7 @@
       .container {
           max-width: 800px;
           margin: auto;
+          /* Não usamos fundo branco nem sombra, conforme instruções */
           padding: 20px;
           border-radius: 8px;
           position: relative;
@@ -55,6 +56,7 @@
           margin-bottom: 10px;
       }
 
+      /* "Exercise 1:" etc. em negrito */
       .exercise-description {
           font-weight: bold;
           margin-bottom: 10px;
@@ -64,11 +66,10 @@
           margin: 10px 0;
           font-size: 1rem;
           word-break: break-word; 
-          white-space: normal;
-          /* Evita que a linha seja cortada entre páginas */
-          page-break-inside: avoid;
+          white-space: normal; 
       }
 
+      /* Inputs para respostas corrigidas */
       .answer-input {
           padding: 5px;
           border: 1px solid #000; 
@@ -78,6 +79,7 @@
           box-sizing: border-box; 
       }
 
+      /* Linhas de texto livre (não corrigidas) */
       .free-text-span {
           border-bottom: 1px solid #000; 
           display: inline-block;
@@ -85,14 +87,15 @@
           margin-left: 10px;
           vertical-align: bottom;
           min-height: 20px; 
-          page-break-inside: avoid;
       }
+      /* Input para texto livre */
       .free-text-input {
           border: none;
           outline: none;
           width: 180px; 
       }
 
+      /* Resposta certa ou errada */
       .correct {
           color: blue; 
       }
@@ -100,6 +103,7 @@
           color: red;  
       }
 
+      /* Mostra a resposta certa ao lado */
       .correct-answer-span {
           display: none; 
           font-weight: bold;
@@ -107,6 +111,7 @@
           color: blue;
       }
 
+      /* Botões */
       #check-all-btn, #generate-pdf-btn, #show-examples-btn {
           background-color: black;
           color: white;
@@ -155,10 +160,10 @@
           background-color: #444;
       }
 
+      /* Tabelas geradas via #TABLE */
       table {
           border-collapse: collapse;
           margin: 10px 0;
-          page-break-inside: avoid; /* Evita corte de tabela no meio */
       }
       table, th, td {
           border: 1px solid #000;
@@ -167,27 +172,22 @@
           padding: 8px;
       }
 
+      /* Múltipla escolha, V/F, etc. */
       .choice-container {
           margin-left: 20px;
           margin-bottom: 10px;
-          page-break-inside: avoid; /* Evita corte */
       }
 
+      /* Tabela ou box harmoniosa (#BOX) */
       .info-box {
           border: 1px solid #333;
           background-color: #f0f8ff;
           padding: 10px;
           border-radius: 5px;
           margin: 10px 0;
-          page-break-inside: avoid; /* Evita corte */
       }
 
-      img {
-          max-width: 100% !important;
-          height: auto !important;
-          page-break-inside: avoid; /* Evita corte de imagem */
-      }
-
+      /* Ajustes de responsividade para telas pequenas */
       @media (max-width: 600px) {
           .container {
               padding: 10px;
@@ -249,7 +249,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-<!-- html2canvas separado -->
+<!-- (IMPORTANTE) html2canvas separado -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
 <!-- jsPDF (UMD) -->
@@ -1161,16 +1161,15 @@
           span.style.display = 'none';
       });
 
-      // Ajuste para tentar evitar corte horizontal
-      // e melhorar as quebras de página
+      // Render HTML -> PDF via doc.html
       doc.html(containerClone, {
-        x: 10,
-        y: 10,
-        width: 580,           // Um pouco mais que 560 para aproveitar mais a página, mas ainda cabendo
+        x: 20,
+        y: 20,
+        width: 560,
         windowWidth: 800,
         autoPaging: 'text', 
         html2canvas: {
-          scale: 0.85,        // Reduz ligeiramente para evitar corte na horizontal
+          scale: 0.9,
           useCORS: true
         },
         callback: function(pdf) {
