--- a/Level1/Unit2/teacher/index.html
+++ b/Level1/Unit2/teacher/index.html
@@ -128,17 +128,14 @@
             background-color: #bbb;
         }
 
-        /* Classe para melhorar a formatação do texto carregado */
+        /* Classe base para formatação de texto */
         .formatted-text {
             line-height: 1.7;
             font-size: 1rem;
             color: #444;
         }
 
-        /* Formatação adicional para títulos e listas dentro do texto */
-        .formatted-text h2,
-        .formatted-text h3,
-        .formatted-text h4 {
+        .formatted-text h3 {
             color: #333;
             margin-top: 1.5em;
             margin-bottom: 0.5em;
@@ -146,16 +143,14 @@
 
         .formatted-text strong {
             color: #4CAF50;
-            font-weight: bold;
         }
 
         .formatted-text em {
             font-style: italic;
         }
 
-        .formatted-text ul,
-        .formatted-text ol {
-            margin-left: 2em;
+        .formatted-text ul {
+            margin-left: 1.5em;
             margin-bottom: 1em;
         }
 
@@ -169,10 +164,19 @@
             border-top: 1px solid #ccc;
         }
 
+        .formatted-text p {
+            margin-bottom: 1em;
+        }
+
+        .formatted-text br {
+            margin-bottom: 1em;
+        }
+
         /* Ajuste para dispositivos menores */
         @media (max-width: 800px) {
             .content {
                 padding: 15px;
+                margin: 20px auto;
             }
 
             h1 {
@@ -281,7 +285,9 @@
     </div>
 
     <script>
-        /* Retorna ao nível anterior */
+        /**
+         * Retorna ao nível anterior
+         */
         function goBackToLevel() {
             const currentUrl = window.location.href;
             // Remove "/teacher/index.html" e volta para "/index.html"
@@ -289,26 +295,115 @@
             window.location.href = newUrl;
         }
 
-        /* MOSTRA CONTEÚDO NO TEACHERS GUIDE CONTAINER */
-        function showTeachersGuideContent(fileName) {
-            // Fecha Creative Activity, se estiver aberto
-            closeCreativeActivity();
+        /**
+         * Realiza a conversão simples de um texto cru em HTML formatado.
+         * - ### Título => <h3>
+         * - --- => <hr>
+         * - **negrito** => <strong>
+         * - - item => <li> (em um <ul>)
+         * - Senão => <p> (cada linha)
+         */
+        function parsePlainTextToHtml(text) {
+            const lines = text.split('\n');
+            let html = '';
+            let inUl = false; // controla se estamos dentro de uma lista não ordenada
 
-            // Carrega o arquivo de texto e exibe no contêiner #teachersGuideContainer
+            for (let line of lines) {
+                let trimmed = line.trim();
+
+                // Linha com três travessões => <hr>
+                if (trimmed === '---') {
+                    if (inUl) {
+                        html += '</ul>';
+                        inUl = false;
+                    }
+                    html += '<hr>';
+                    continue;
+                }
+
+                // Se começa com ### => <h3>
+                if (trimmed.startsWith('###')) {
+                    if (inUl) {
+                        html += '</ul>';
+                        inUl = false;
+                    }
+                    let content = trimmed.replace(/^###\s*/, '');
+                    content = applyBold(content);
+                    html += `<h3>${content}</h3>`;
+                    continue;
+                }
+
+                // Se a linha começa com '- ' => item de lista
+                if (trimmed.startsWith('- ')) {
+                    // se não estivermos em <ul>, abre
+                    if (!inUl) {
+                        html += '<ul>';
+                        inUl = true;
+                    }
+                    // remove '- '
+                    let content = trimmed.replace(/^- /, '');
+                    content = applyBold(content);
+                    html += `<li>${content}</li>`;
+                    continue;
+                }
+
+                // Se não for nenhuma das condições acima => trata como <p> normal
+                // Se já estávamos em <ul>, encerra antes
+                if (inUl) {
+                    html += '</ul>';
+                    inUl = false;
+                }
+
+                if (trimmed.length === 0) {
+                    // linha em branco => quebra de linha
+                    html += '<br>';
+                } else {
+                    let content = applyBold(line);
+                    html += `<p>${content}</p>`;
+                }
+            }
+
+            // fecha lista se ficou aberta no final
+            if (inUl) {
+                html += '</ul>';
+            }
+
+            return html;
+        }
+
+        /**
+         * Converte trechos **texto** em <strong>texto</strong>
+         */
+        function applyBold(str) {
+            // **texto** => <strong>texto</strong>
+            return str.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+        }
+
+        /**
+         * Exibe conteúdo no contêiner de Teachers Guide
+         */
+        function showTeachersGuideContent(fileName) {
+            closeCreativeActivity();
             fetch(fileName)
             .then(response => response.text())
             .then(data => {
                 const container = document.getElementById('teachersGuideContainer');
                 const contentDiv = document.getElementById('teachersGuideContent');
-                contentDiv.innerHTML = data;
+                // Faz parsing do texto para HTML
+                const formatted = parsePlainTextToHtml(data);
+                contentDiv.innerHTML = formatted;
                 container.style.display = 'block';
+                // Rola a página até o contêiner
+                container.scrollIntoView({ behavior: 'smooth' });
             })
             .catch(error => {
                 console.error('Erro ao carregar o arquivo de texto:', error);
             });
         }
 
-        /* FECHA TEACHERS GUIDE */
+        /**
+         * Fecha o contêiner de Teachers Guide
+         */
         function closeTeachersGuide() {
             const container = document.getElementById('teachersGuideContainer');
             const contentDiv = document.getElementById('teachersGuideContent');
@@ -316,25 +411,30 @@
             container.style.display = 'none';
         }
 
-        /* MOSTRA CONTEÚDO NO CREATIVE ACTIVITY CONTAINER */
+        /**
+         * Exibe conteúdo no contêiner de Creative Activity
+         */
         function showCreativeActivityContent(fileName) {
-            // Fecha Teachers Guide, se estiver aberto
             closeTeachersGuide();
-
             fetch(fileName)
             .then(response => response.text())
             .then(data => {
                 const container = document.getElementById('creativeActivityContainer');
                 const contentDiv = document.getElementById('creativeActivityContent');
-                contentDiv.innerHTML = data;
+                const formatted = parsePlainTextToHtml(data);
+                contentDiv.innerHTML = formatted;
                 container.style.display = 'block';
+                // Rola a página até o contêiner
+                container.scrollIntoView({ behavior: 'smooth' });
             })
             .catch(error => {
                 console.error('Erro ao carregar o arquivo de texto:', error);
             });
         }
 
-        /* FECHA CREATIVE ACTIVITY */
+        /**
+         * Fecha o contêiner de Creative Activity
+         */
         function closeCreativeActivity() {
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
@@ -342,16 +442,17 @@
             container.style.display = 'none';
         }
 
-        /* MOSTRA MINIATURAS DAS IMAGENS (DOCUMENTOS) NO CREATIVE ACTIVITY */
+        /**
+         * Mostra miniaturas das imagens (documentos) dentro do contêiner de Creative Activity
+         */
         function showDocuments() {
-            // Fecha Teachers Guide, se aberto
             closeTeachersGuide();
-
             // Carrega miniaturas dentro do contêiner #creativeActivityContainer
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
 
             // Exemplo de lista de arquivos de imagens
+            // Ajuste conforme o que você tiver na pasta
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
@@ -379,9 +480,12 @@
 
             contentDiv.innerHTML = html;
             container.style.display = 'block';
+            container.scrollIntoView({ behavior: 'smooth' });
         }
 
-        /* ABRE MODAL PARA EXIBIR IMAGEM AMPLIADA */
+        /**
+         * Abre modal para exibir imagem ampliada
+         */
         function openImageModal(imgSrc) {
             // Cria overlay
             const overlay = document.createElement('div');
@@ -395,7 +499,9 @@
             document.body.appendChild(overlay);
         }
 
-        /* FECHA O MODAL DE IMAGENS */
+        /**
+         * Fecha o modal de imagens
+         */
         function closeModal() {
             const overlay = document.querySelector('.modal-overlay');
             if (overlay) {
