--- a/Level1/Unit2/teacher/index.html
+++ b/Level1/Unit2/teacher/index.html
@@ -100,32 +100,37 @@
             }
         }
 
-        /* Contêiner genérico para conteúdos */
+        /* Contêineres de conteúdo transparentes */
         .content {
             max-width: 800px;
             margin: 40px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            /* Para evitar que o botão de fechar se sobreponha ao texto, aumentamos o padding-top */
+            padding: 40px 20px 20px;
+            background-color: transparent; /* contêiner invisível */
+            border: none;
+            box-shadow: none;
             position: relative;
             display: none; /* oculto inicialmente */
         }
 
-        /* Botão de fechar */
+        /* Botão de fechar mais harmonioso */
         .close-btn {
             position: absolute;
-            top: 15px;
-            right: 15px;
-            background-color: #ddd;
+            top: 10px;
+            right: 10px;
+            background-color: #FF6347; 
+            color: #fff;
             border: none;
-            padding: 8px 12px;
+            padding: 10px 16px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 30px;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease;
         }
 
         .close-btn:hover {
-            background-color: #bbb;
+            background-color: #e0553c;
         }
 
         /* Classe base para formatação de texto */
@@ -175,7 +180,7 @@
         /* Ajuste para dispositivos menores */
         @media (max-width: 800px) {
             .content {
-                padding: 15px;
+                padding: 50px 15px 15px;
                 margin: 20px auto;
             }
 
@@ -252,7 +257,7 @@
 
     <!-- Contêiner de texto para Teachers Guide -->
     <div class="content" id="teachersGuideContainer">
-        <button class="close-btn" onclick="closeTeachersGuide()">Close</button>
+        <button class="close-btn" onclick="closeTeachersGuide()">X</button>
         <div id="teachersGuideContent" class="formatted-text"></div>
     </div>
 
@@ -271,7 +276,7 @@
 
     <!-- Contêiner de texto para Creative Activity -->
     <div class="content" id="creativeActivityContainer">
-        <button class="close-btn" onclick="closeCreativeActivity()">Close</button>
+        <button class="close-btn" onclick="closeCreativeActivity()">X</button>
         <div id="creativeActivityContent" class="formatted-text"></div>
     </div>
 
@@ -301,6 +306,7 @@
          * - --- => <hr>
          * - **negrito** => <strong>
          * - - item => <li> (em um <ul>)
+         * - Linhas vazias => <br>
          * - Senão => <p> (cada linha)
          */
         function parsePlainTextToHtml(text) {
@@ -456,7 +462,10 @@
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
-                'imagem3.png'
+                'imagem3.png',
+                'imagem4.png',
+                'imagem5.png',
+                'imagem6.png'
             ];
 
             let html = `<h3>Documentos</h3>`;
